--- a/templates/moniter/welcome1.html
+++ b/templates/moniter/welcome1.html
@@ -38,8 +38,10 @@
                 <div class="layui-card-header" style="float: left">最近四天新增数据</div>
                 <div class="row">
                     <div class="col-lg-6">
+                        <form class="layui-form" method="post" action="{% url 'edit_selectbase' %}">
                         <div class="input-group">
-                            <input type="text" id="database" class="form-control" aria-label="...">
+                                {% csrf_token %}
+                                <input type="text" id="database" class="form-control" name="data_base" aria-label="..." value="{{ database_name }}">
                             <div class="input-group-btn">
                                 <button type="submit" class="btn btn-default btn btn-danger layui-icon" >&#xe615; 确认</button>
                                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
@@ -53,6 +55,7 @@
                                 </ul>
                             </div><!-- /btn-group -->
                         </div><!-- /input-group -->
+                        </form>
                     </div>
                 </div>
 
