--- a/templates/moniter/member-edit.html
+++ b/templates/moniter/member-edit.html
@@ -33,11 +33,12 @@
 <div class="layui-fluid">
     <div class="layui-row">
         <form class="layui-form" action="{% url 'edit_action' %}" method="post">
-        {% csrf_token %}
+            {% csrf_token %}
             <input type="hidden" name="spider_id" value="{{ data.spider_id }}">
             <div class="layui-form-item">
                 <label for="L_email" class="layui-form-label">
-                    <span class="x-red">*</span><nobr>更新频率</nobr>
+                    <span class="x-red">*</span>
+                    <nobr>更新频率</nobr>
                 </label>
                 <div class="layui-input-inline">
                     <input required="" lay-verify="email" autocomplete="off" name="interval_time"
@@ -48,7 +49,8 @@
             </div>
             <div class="layui-form-item">
                 <label for="L_username" class="layui-form-label">
-                    <span class="x-red">*</span><nobr>入库表名</nobr>
+                    <span class="x-red">*</span>
+                    <nobr>入库表名</nobr>
                 </label>
                 <div class="layui-input-inline">
                     <input type="text" id="L_username" name="data_base" required="" lay-verify="nikename"
@@ -57,10 +59,10 @@
                     <span class="x-red">*</span>入库位置
                 </div>
             </div>
-
             <div class="layui-form-item">
                 <label for="L_pass" class="layui-form-label">
-                    <span class="x-red">*</span><nobr>分布机器</nobr>
+                    <span class="x-red">*</span>
+                    <nobr>分布机器</nobr>
                 </label>
                 <div class="layui-input-inline">
                     <input type="type" id="L_pass" name="server" required="" lay-verify="pass" autocomplete="off"
@@ -83,8 +85,6 @@
                     </ul>
                 </div>
             </div>
-
-
             <div class="layui-form-item">
                 <label for="L_repass" class="layui-form-label"></label>
                 <button class="layui-btn" lay-filter="add" lay-submit="" type="submit">提交</button>
@@ -99,50 +99,58 @@
         {#$('#L_pass').textbox(new_value,old_value);#}
     }
 </script>
-<script>layui.use(['form', 'layer'],
-    function () {
-        $ = layui.jquery;
-        var form = layui.form,
-            layer = layui.layer;
+<script>
+    function sleep(d) {
+        for (var t = Date.now(); Date.now() - t <= d;) ;
+    }
 
-        //自定义验证规则
-        form.verify({
-            email: function (value) {
-                if (typeof (value) != "string") {
-                    return '参数必须为数字';
-                }
-            },
-            nikename: function (value) {
-                if (value.length < 1) {
-                    return '昵称至少得5个字符啊';
-                }
-            },
-            {#pass: [/(.+){6,12}$/, '密码必须6到12位'],#}
-            repass: function (value) {
-                {#if ($('#L_pass').val() != $('#L_repass').val()) {#}
-                if (value.length < 1) {
-                    return '两次密码不一致';}
-            }
-        });
+    layui.use(['form', 'layer'],
+        function () {
+            $ = layui.jquery;
+            var form = layui.form,
+                layer = layui.layer;
 
-        //监听提交
-        form.on('submit(add)',
-            function (data) {
-                {#console.log(data);#}
-                //发异步，把数据提交给php
-                layer.alert("修改成功", {
-                        icon: 6
-                    },
-                    function () {
-                        // 获得frame索引
-                        var index = parent.layer.getFrameIndex(window.name);
-                        //关闭当前frame
-                        parent.layer.close(index);
-                    });
-                return false;
+            //自定义验证规则
+            form.verify({
+                email: function (value) {
+                    if (typeof (value) != "string") {
+                        return '参数必须为数字';
+                    }
+                },
+                nikename: function (value) {
+                    if (value.length < 1) {
+                        return '昵称至少得5个字符啊';
+                    }
+                },
+                {#pass: [/(.+){6,12}$/, '密码必须6到12位'],#}
+                repass: function (value) {
+                    {#if ($('#L_pass').val() != $('#L_repass').val()) {#}
+                    if (value.length < 1) {
+                        return '两次密码不一致';
+                    }
+                }
             });
 
-    });</script>
+            //监听提交
+            form.on('submit(add)',
+                function (data) {
+                    console.log(data);
+                    layer.msg(JSON.stringify(data.field));
+                    sleep(10);
+                    //发异步，把数据提交给php
+                    layer.alert("修改成功", {
+                            icon: 6
+                        },
+                        function () {
+                            // 获得frame索引
+                            var index = parent.layer.getFrameIndex(window.name);
+                            //关闭当前frame
+                            parent.layer.close(index);
+                        });
+                    {#return false;#}
+                });
+
+        });</script>
 <script>var _hmt = _hmt || [];
 (function () {
     var hm = document.createElement("script");
